# demodados

./: .gitignore  README.md  dbt_project.yml  main.py  pyproject.toml  votacoes.csv
demodadosdw/: dbt_project.yml
demodadosdw/models/bronze/camara_deputados/: _camara_deputados__sources.yml  brz_camara__deputados.sql
demodadosdw/models/bronze/radar_congresso/: _radarcongresso__models.yml  _radarcongresso__sources.yml  brz_radarcongresso__deputados_detalhes.sql  brz_radarcongresso__governismo_deputados.sql
demodadosdw/models/gold/: governismo_dos_deputados.sql  governismo_dos_deputados_trimestre.sql
demodadosdw/models/silver/: dim_deputados.sql  fct_governismo_deputados_total.sql  fct_governismo_deputados_trimestre.sql
src/params/: id_deputados.csv  id_deputados.json
src/pipelines/camara_deputados/: camara_deputados.py  radar_congresso.py  schema.py
src/utils/: logger.py  logging_config.py  pandera_schema.py
src/utils/extractors/: https.py
src/utils/loaders/: postgres.py
src/utils/transformers/: cleaning.py  json_parsers.py
